<resources>
    <string name="app_name">Car Gallery</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_home">Home Car Gallery</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_honda_jazz">Honda Jazz</string>
    <string name="txt_honda">Honda</string>
    <string name="txt_year">2017</string>
    <string name="txt_detail">Detail Car Gallery</string>
    <string name="txt_add_car">Add Car</string>
    <string name="txt_add">Add Car Gallery</string>
    <string name="txt_save">Save</string>
    <string name="txt_hint_year">tahun : YYYY</string>
    <string name="txt_hint_make">make</string>
    <string name="txt_hint_model">model</string>
    <string name="txt_not_found">Not Found!</string>
    <string name="txt_map">Map</string>
    <string name="txt_upload">upload</string>
</resources>
